--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "@types/react-router-dom": "^5.1.7",
     "gh-pages": "^3.2.0"
   },
-  "homepage": "http://alicolver.github.io/euro2020-front-end"
+  "homepage": "http://alicolver.github.io/euro2020"
 }
