--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
     "gh-pages": "^3.2.0"
   },
