Updating to be world cup things :)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Euros2020 Predictor",
-  "name": "Euros2020 Predictor",
+  "short_name": "WorldCup Predictor",
+  "name": "World Cup 2022 Predictor",
   "icons": [
     {
       "src": "favicon.ico",
