--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "euro2020",
+  "name": "worldcup",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -59,5 +59,5 @@
     "@types/react-router-dom": "^5.1.7",
     "gh-pages": "^3.2.0"
   },
-  "homepage": "http://alicolver.github.io/euro2020"
+  "homepage": "http://alicolver.github.io/worldcup"
 }
