--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -55,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.108",
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
     "gh-pages": "^3.2.0"
