--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "jwt-decode": "^3.1.2",
+    "password-validator": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -62,6 +63,7 @@
     "@types/aws-lambda": "^8.10.108",
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
+    "@types/validator": "^13.7.10",
     "gh-pages": "^3.2.0"
   },
   "homepage": "http://alicolver.github.io/worldcup"
