--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.11",
-    "gh-pages": "^3.2.0"
+    "gh-pages": "^3.2.0",
+    "jest": "^27.5.1"
   },
   "homepage": "http://alicolver.github.io/worldcup"
 }
