--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.1.16",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2",
     "workbox-background-sync": "^5.1.3",
