--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^3.1.2",
     "password-validator": "^5.3.0",
     "react": "^17.0.2",
+    "react-countup": "^6.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
